--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <ul class="nav-links">
               <li><a href="#home">Home</a></li>
               <li><a href="#contact">Contact</a></li>
-              <li><a href="#experience">Interests</a></li>
-              <li><a href="#projects">Project</a></li>
+              <li><a href="#interest">Interest</a></li>
+              <li><a href="#projects">Projects</a></li>
             </ul>
           </div>
         </nav>
@@ -32,7 +32,7 @@
               <li><a href="#home" onclick="toggleMenu()">Home</a></li>
               <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
               <li>
-                <a href="#experience" onclick="toggleMenu()">Experience</a>
+                <a href="#interest" onclick="toggleMenu()">Interest</a>
               </li>
               <li><a href="#projects_" onclick="toggleMenu()">Project</a></li>
             </div>
@@ -183,7 +183,7 @@
         </div>
       </section>
 
-      <section id="experience">
+      <section id="interest">
         <div class="exp_sec_heading">
           <h3 class="experience_heading">Interest</h3>
         </div>
